--- a/style.css
+++ b/style.css
@@ -102,6 +102,8 @@ h2 {
 .row {
   min-height: 200px;
   display: flex;
+  /*Use the flex-wrap property to wrap elements with class row.*/
+  flex-wrap: wrap;
 }
 
 .square {
